# vigilante

./: .gitignore  .gitmessage  README.md  commitlint.config.js  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  tailwind.config.ts  tsconfig.base.json  workflow.md
.husky/: commit-msg
.lovable/: plan.md
app/: __init__.py  config.py  database.py  main.py  socketio_app.py  socketio_handler.py
app/core/: __init__.py  deps.py  security.py
app/middleware/: rate_limiter.py  socketio_auth.py
app/models/: __init__.py  agent_vote.py  chat.py  (+2 more)
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/python/: scrapling_worker.py
apps/web/src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
apps/web/src-tauri/src/commands/: activity.rs  attachments.rs  chat.rs  drafts.rs  mcp.rs  messages.rs  mod.rs  models.rs  runtime.rs  settings.rs  storage.rs  threads.rs  workspaces.rs
apps/web/src-tauri/src/models/: activity.rs  attachment.rs  desktop.rs  index.rs  mcp.rs  message.rs  mod.rs  runtime.rs  settings.rs  thread.rs  workspace.rs
apps/web/src-tauri/src/services/: activity_service.rs  attachment_service.rs  chat_service.rs  database_service.rs  draft_service.rs  export_service.rs  mcp_service.rs  mod.rs  model_service.rs  runtime_service.rs  scrapling_service.rs  storage_service.rs  thread_service.rs  web_service.rs  workspace_service.rs
apps/web/src-tauri/src/storage/: json_store.rs  migrations.rs  mod.rs  paths.rs
src/: App.tsx  index.css
(+138 files in other folders)
