[package]
name = "vigilante"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Vigilante — local-first AI research engine"
authors = []
license = ""

[lib]
name = "vigilante_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vigilante"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"

# Async runtime
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "io-util",
  "sync",
  "time",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# IDs and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Atomic writes: write to temp → rename
tempfile = "3"

# Fast RwLock for in-memory thread index
parking_lot = "0.12"

# HTTP client for Ollama health checks + model list
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
